--- a/trunk/of/po/zh_TW/openfoundry.po
+++ b/trunk/of/po/zh_TW/openfoundry.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: openfoundry 0.1\n"
-"POT-Creation-Date: 2008-08-03 18:17-0000\n"
+"POT-Creation-Date: 2008-08-04 08:53-0000\n"
 "PO-Revision-Date: 2007-05-16 03:50-0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -96,6 +96,11 @@ msgstr ""
 msgid "Category|Updated at"
 msgstr ""
 
+#: app/models/category.rb:-
+#, fuzzy
+msgid "Category|Updated by"
+msgstr "上次修改時間"
+
 #: app/models/user.rb:-
 msgid "User|Icon"
 msgstr "圖像"
@@ -112,6 +117,22 @@ msgstr "密碼(加密)"
 #: app/views/user/_email.rhtml:4 app/views/user/_email.rhtml:12
 msgid "User|Email"
 msgstr "電子郵件"
+
+#: app/models/user.rb:- app/views/user/_edit.rhtml:10
+msgid "User|Realname"
+msgstr "真實姓名"
+
+#: app/models/user.rb:- app/views/user/_edit.rhtml:12
+msgid "User|Homepage"
+msgstr "個人首頁"
+
+#: app/models/user.rb:- app/views/user/_edit.rhtml:14
+msgid "User|Bio"
+msgstr "自我描述"
+
+#: app/models/user.rb:-
+msgid "User|Identity url"
+msgstr "OpenID識別網址"
 
 #: app/models/user.rb:-
 msgid "User|Salt"
@@ -160,22 +181,6 @@ msgstr "語言"
 #: app/models/user.rb:-
 msgid "User|Timezone"
 msgstr "時區"
-
-#: app/models/user.rb:-
-msgid "User|Identity url"
-msgstr "OpenID識別網址"
-
-#: app/models/user.rb:- app/views/user/_edit.rhtml:14
-msgid "User|Bio"
-msgstr "自我描述"
-
-#: app/models/user.rb:- app/views/user/_edit.rhtml:12
-msgid "User|Homepage"
-msgstr "個人首頁"
-
-#: app/models/user.rb:- app/views/user/_edit.rhtml:10
-msgid "User|Realname"
-msgstr "真實姓名"
 
 #: app/models/user.rb:106
 msgid "Old Password Incorrect"
@@ -229,6 +234,19 @@ msgstr "建立者"
 msgid "Release|Release counter"
 msgstr "下載次數"
 
+#: app/models/release.rb:-
+#, fuzzy
+msgid "Release|Updated by"
+msgstr "更新時間"
+
+#: app/models/release.rb:16
+msgid "PREPARING"
+msgstr "準備中 (Preparing)"
+
+#: app/models/release.rb:17 app/models/project.rb:6
+msgid "RELEASED"
+msgstr "釋出 (Released)"
+
 #: app/models/role.rb:-
 msgid "role"
 msgstr ""
@@ -256,6 +274,11 @@ msgstr ""
 #: app/models/role.rb:-
 msgid "Role|Creator"
 msgstr ""
+
+#: app/models/role.rb:-
+#, fuzzy
+msgid "Role|Updated by"
+msgstr "上次修改時間"
 
 #: app/models/image.rb:-
 msgid "image"
@@ -303,6 +326,11 @@ msgstr "建立時間"
 
 #: app/models/function.rb:-
 msgid "Function|Updated at"
+msgstr "上次修改時間"
+
+#: app/models/function.rb:-
+#, fuzzy
+msgid "Function|Updated by"
 msgstr "上次修改時間"
 
 #: app/models/session.rb:-
@@ -425,6 +453,11 @@ msgstr "建立日期"
 msgid "Project|Updated at"
 msgstr "上次修改時間"
 
+#: app/models/project.rb:-
+#, fuzzy
+msgid "Project|Updated by"
+msgstr "上次修改時間"
+
 #: app/models/project.rb:6
 msgid "IDEA"
 msgstr "概念 (Idea)"
@@ -440,10 +473,6 @@ msgstr "測試 (Alpha)"
 #: app/models/project.rb:6
 msgid "BETA"
 msgstr "試用 (Beta)"
-
-#: app/models/project.rb:6
-msgid "RELEASED"
-msgstr "釋出 (Released)"
 
 #: app/models/project.rb:6
 msgid "MATURE"
@@ -590,6 +619,11 @@ msgstr "建立時間"
 
 #: app/models/fileentity.rb:-
 msgid "Fileentity|Updated at"
+msgstr "上次修改時間"
+
+#: app/models/fileentity.rb:-
+#, fuzzy
+msgid "Fileentity|Updated by"
 msgstr "上次修改時間"
 
 #: app/models/fileentity.rb:-
@@ -965,21 +999,21 @@ msgstr "新聞"
 msgid "project_News"
 msgstr "專案新聞"
 
-#: app/controllers/news_controller.rb:89
+#: app/controllers/news_controller.rb:91
 #: app/controllers/citations_controller.rb:66
 #: app/controllers/jobs_controller.rb:63
 #: app/controllers/references_controller.rb:59
 msgid "Add Successful"
 msgstr ""
 
-#: app/controllers/news_controller.rb:111
+#: app/controllers/news_controller.rb:115
 #: app/controllers/citations_controller.rb:87
 #: app/controllers/jobs_controller.rb:81
 #: app/controllers/references_controller.rb:74
 msgid "Edit Successful"
 msgstr ""
 
-#: app/controllers/news_controller.rb:120
+#: app/controllers/news_controller.rb:124
 #: app/controllers/citations_controller.rb:96
 #: app/controllers/jobs_controller.rb:90
 #: app/controllers/references_controller.rb:83
@@ -1109,20 +1143,20 @@ msgstr "規畫釋出"
 msgid "Downloads"
 msgstr "下載pdf格式"
 
-#: app/controllers/releases_controller.rb:180
+#: app/controllers/releases_controller.rb:181
 msgid "Release id not found!"
 msgstr ""
 
-#: app/controllers/releases_controller.rb:185
+#: app/controllers/releases_controller.rb:186
 #, fuzzy
 msgid "Project id not found!"
 msgstr "註冊原因"
 
-#: app/controllers/releases_controller.rb:190
+#: app/controllers/releases_controller.rb:191
 msgid "You doesn't select any files!"
 msgstr ""
 
-#: app/controllers/releases_controller.rb:197
+#: app/controllers/releases_controller.rb:198
 msgid "Your files have been added to Release!"
 msgstr ""
 
@@ -1313,10 +1347,15 @@ msgid "How to Access"
 msgstr "存取方式"
 
 #: app/views/partials/_project_menu.rhtml:81
+#: app/views/partials/_project_menu.rhtml:82
 msgid "release_Releases"
 msgstr "規畫釋出"
 
 #: app/views/partials/_project_menu.rhtml:84
+msgid "release_New"
+msgstr "新增版本"
+
+#: app/views/partials/_project_menu.rhtml:89
 msgid "project_Role Control"
 msgstr "成員管理"
 
@@ -1512,6 +1551,14 @@ msgstr "指導單位"
 #: app/views/layouts/admin.rhtml:6
 msgid "OpenFoundry"
 msgstr "自由軟體鑄造場"
+
+#: app/views/releases/edit.rhtml:19
+msgid "Update"
+msgstr "更新"
+
+#: app/views/releases/new.rhtml:23
+msgid "Create"
+msgstr "建立"
 
 #: app/views/releases/_most_popular.rhtml:1
 msgid "Top Download"
